<resources>
    <string name="app_name">Event Attendance Management System</string>
    <string name="email_field_hint">✉ Enter Email</string>
    <string name="password_field_hint">🗝 Enter Password</string>
    <string name="login_button">Login</string>

    <string name="sign_up_text">Sign Up</string>
    <string name="first_name_field_hint">✎ Enter First Name</string>
    <string name="last_name_field_hint">✎ Enter Last Name</string>
    <string name="phone_number_field_hint">✆ Enter Phone Number</string>
    <string name="street_field_hint">⌂ Enter Building Number and Street Name </string>
    <string name="postalCode_field_hint">⌂ Enter Postal Code </string>
    <string name="city_field_hint">⌂ Enter City </string>
    <string name="province_field_hint">⌂ Enter Province </string>
    <string name="organizer_checkbox">I am an Organizer </string>
    <string name="organization_field_hint">✎ Enter Organization</string>
    <string name="reenter_password_field_hint">🗝 Re-enter Password</string>

    <string name ="rejected_email">Error. Your email was rejected. Please contact the administrator at 647-777-8199 to resolve the issue.</string>

    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>

    <string name="welcome_message_attendee">Welcome! You are logged in as an Attendee</string>
    <string name="welcome_message_administrator">Welcome! You are logged in as an Administrator</string>
    <string name="welcome_message_organizer">Welcome! You are logged in as an Organizer</string>
    <string name="logout">Logout</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="create_event">Create Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="building_number_and_street">Building Number and Street</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="end_date_and_time">End date and time</string>
    <string name="check_the_box_for_automatic_approval_of_event_attendee_requests">Check the box for automatic approval of event attendee requests</string>
    <string name="start_date_and_time">Start date and time</string>
    <string name="postal_code">Postal Code</string>
    <string name="event_address">Event Address</string>
    <string name="please_complete_the_following_information_regarding_your_event_then_press_quot_create_event_quot">Please complete the following information regarding your event then press \"Create Event\"</string>
    <string name="back">Back</string>
    <string name="requested_events">Requested Events</string>

</resources>