<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_page"
    android:layout_width="match_parent"
    android:background="@drawable/appbackground"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpPage">

    <TextView
        android:id="@+id/signUpText_signup_page"
        android:layout_width="wrap_content"
        android:fontFamily="@font/amarante_regular"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_up_text"
        android:shadowColor="@color/back1"
        android:shadowDy="10"
        android:shadowRadius="1"
        android:textSize="50sp"
        android:background="@drawable/back_rounded"
        android:paddingHorizontal="110dp"
        android:paddingVertical="5dp"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/signUpScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="15dp"
        android:elevation="5dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/back_rounded"
        app:layout_constraintTop_toBottomOf="@+id/signUpText_signup_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer_signup_page">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/enterFirstName_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginBottom="26dp"
                android:autofillHints="person_name"
                android:hint="@string/first_name_field_hint"
                style="@style/EditText.Style"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/enterLastName_signup_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/enterLastName_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="person_name_family"
                android:hint="@string/last_name_field_hint"
                style="@style/EditText.Style"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterFirstName_signup_page" />

            <EditText
                android:id="@+id/enterEmail_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email_field_hint"
                style="@style/EditText.Style"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterLastName_signup_page" />

            <EditText
                android:id="@+id/enterPhoneNumber_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="phone_number"
                android:hint="@string/phone_number_field_hint"
                style="@style/EditText.Style"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterEmail_signup_page" />

            <EditText
                android:id="@+id/enterStreet_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="address_street_address"
                android:hint="@string/street_field_hint"
                style="@style/EditText.Style"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterPhoneNumber_signup_page" />

            <EditText
                android:id="@+id/enterCity_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="person_name_family"
                android:hint="@string/city_field_hint"
                style="@style/EditText.Style"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterStreet_signup_page" />

            <EditText
                android:id="@+id/enterProvince_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="person_name_family"
                android:hint="@string/province_field_hint"
                style="@style/EditText.Style"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterCity_signup_page" />



            <EditText
                android:id="@+id/enterPostalCode_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="address_street_address"
                android:hint="@string/postalCode_field_hint"
                style="@style/EditText.Style"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterProvince_signup_page" />

            <EditText
                android:id="@+id/enterPassword_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:autofillHints="password"
                android:hint="@string/password_field_hint"
                style="@style/EditText.Style"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterPostalCode_signup_page" />

            <EditText
                android:id="@+id/reenterPassword_signup_page"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="26dp"
                android:hint="@string/reenter_password_field_hint"
                style="@style/EditText.Style"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterPassword_signup_page" />

            <CheckBox
                android:id="@+id/organizerCheckBox_signup_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/organizer_checkbox"
                android:fontFamily="@font/capriola_regular"
                android:buttonTint="@color/colour1"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reenterPassword_signup_page"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/enterOrganization_signup_page"
                style="@style/EditText.Style"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/organization_field_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/organizerCheckBox_signup_page" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/buttonContainer_signup_page"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/backButton_signup_page"
            style="@style/button.Style"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:height="50dp"
            android:layout_marginEnd="5dp"
            android:text="@string/back_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/submitButton_signup_page"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/submitButton_signup_page"
            style="@style/button.Style"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:text="@string/submit_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/backButton_signup_page"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>