<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back2"
    tools:context=".activities.LoginPage">

    <TextView
        android:id="@+id/title_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/amarante_regular"
        android:textFontWeight="600"
        android:shadowColor="@color/white"
        android:shadowDy="10"
        android:shadowRadius="1"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back1"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_login_page"
        app:layout_constraintHorizontal_bias="0.5"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextTextEmailAddress_login_page"
            style="@style/EditText.Style"
            android:layout_width="210dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email_field_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword_login_page"
            style="@style/EditText.Style"
            android:layout_width="210dp"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton_login_page"
            style="@style/button.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/signUpButton_login_page"
            style="@style/button.Style"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/sign_up_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>